--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
           <h1 class="header__title">
             Научиться учиться
           </h1>
-          <h2 class="header__subtitle">
+          <p class="header__subtitle">
             Какие современные и эффективные подходы к обучению
             вы можете использовать в своей жизни?
-            <a class="header__link" href="#">Узнать→</a>
-          </h2>
+            <a class="header__link" href="#">Узнать&rarr;</a>
+          </p>
           <img class="header__main-illustration" src="images/two_again.png" alt="опять двойка">
           <div class="header__square-pic"></div>
         </header>
@@ -50,9 +50,9 @@
             </section>
 
             <section class="digits">
-              <h2 class="section-title centered-block">Цифры и факты</h2>
-              <h3 class="section-subtitle centered-block">Про учёбу и мозг</h3>
-              <div class="table centered-block">
+              <h2 class="section-title">Цифры и факты</h2>
+              <p class="section-subtitle">Про учёбу и мозг</p>
+              <div class="table">
                 <div class="table__cell">
                   <h4 class="table__heading">86 миллиардов</h4>
                   <p class="table__text">
@@ -111,19 +111,19 @@
             </section>
 
             <section class="feinman">
-              <h2 class="feinman__title centered-block">Метод Фейнмана</h2>
-              <h3 class="feinman__subtitle">Выучить и не забыть.</h3>
-              <a href="#" class="feinman__link">Подробнее →</a>
+              <h2 class="feinman__title">Метод Фейнмана</h2>
+              <p class="feinman__subtitle">Выучить и не забыть.</p>
+              <a href="#" class="feinman__link">Подробнее &rarr;</a>
             </section>
 
             <section class="kaufman">
-              <h2 class="section-title section-title_theme_dark centered-block">
+              <h2 class="section-title section-title_theme_dark">
                 Принципы обучения
               </h2>
-              <h3 class="section-subtitle section-subtitle_theme_dark centered-block">
+              <p class="section-subtitle section-subtitle_theme_dark">
                 от Джоша Кауфмана
-              </h3>
-              <div class="table table_theme_dark centered-block">
+              </p>
+              <div class="table table_theme_dark">
                 <div class="table__cell table__cell_theme_dark">
                   <h4 class="table__heading table__heading_theme_dark">1</h4>
                   <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
@@ -165,7 +165,7 @@
                   <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
                 </div>
               </div>
-              <img src="images/triangle.svg" class="kaufman__triangle" alt="Треугольник синий декоративный">
+              <div class="kaufman__triangle"></div>
             </section>
         </main>
         <footer class="footer">
@@ -174,22 +174,22 @@
               <img src="images/logo_white.svg" class="logo logo_place_footer" alt="Логотип">
               <p class="footer__author">&COPY; 2020, Чепелев Михаил</p>
             </div>
-            <div class="footer__column footer__column_content_info">
+            <nav class="footer__column footer__column_content_info">
               <h4 class="footer__column-heading">О Практикуме</h4>
-              <div class="footer__column-links">
-                <a href="#" class="footer__column-link">Главная</a>
-                <a href="#" class="footer__column-link">Концепция</a>
-                <a href="#" class="footer__column-link">Наставники</a>
-              </div>
-            </div>
-            <div class="footer__column footer__column_content_social">
+              <ul class="footer__column-links">
+                <li><a href="#" class="footer__column-link">Главная</a></li>
+                <li><a href="#" class="footer__column-link">Концепция</a></li>
+                <li><a href="#" class="footer__column-link">Наставники</a></li>
+              </ul>
+            </nav>
+            <nav class="footer__column footer__column_content_social">
               <h4 class="footer__column-heading">Соцсети</h4>
-              <div class="footer__column-links">
-                <a href="https://ru-ru.facebook.com/" class="footer__column-link"><img src="./images/facebook_white.svg" alt="" class="footer__social-icon">Facebook</a>
-                <a href="https://vk.com/" class="footer__column-link"><img src="./images/vk_white.svg" alt="" class="footer__social-icon">ВКонтакте</a>
-                <a href="https://www.instagram.com/?hl=ru" class="footer__column-link"><img src="./images/instagram_white.svg" alt="" class="footer__social-icon">Instagram</a>
-              </div>
-            </div>
+              <ul class="footer__column-links">
+                <li><a href="https://ru-ru.facebook.com/" class="footer__column-link"><img src="./images/facebook_white.svg" alt="" class="footer__social-icon">Facebook</a></li>
+                <li><a href="https://vk.com/" class="footer__column-link"><img src="./images/vk_white.svg" alt="" class="footer__social-icon">ВКонтакте</a></li>
+                <li><a href="https://www.instagram.com/?hl=ru" class="footer__column-link"><img src="./images/instagram_white.svg" alt="" class="footer__social-icon">Instagram</a></li>
+              </ul>
+            </nav>
           </div>
 
         </footer>
